Poems vertical alignment is corrected.
Short poems located too low.

--- a/poetry.css
+++ b/poetry.css
@@ -15,7 +15,8 @@ header {
 
 
 #poem {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
